force-app/main/default/objects/Customer__c/fields/Average_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value__c</fullName>
    <description>Average order value calculated from total order value and order count</description>
    <formula>IF(Order_Count__c > 0, Total_Order_Value__c / Order_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated average value per order for this customer.</inlineHelpText>
    <label>Average Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>