force-app/main/default/objects/Customer__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>Customer tier based on total order value and engagement</description>
    <inlineHelpText>Automatically calculated customer tier based on lifetime value: Bronze (&lt;$5K), Silver ($5K-$25K), Gold ($25K-$100K), Platinum ($100K+).</inlineHelpText>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>