force-app/main/default/objects/Customer__c/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <description>Date of the most recent order placed by this customer</description>
    <inlineHelpText>Automatically updated with the date of the customer's most recent order.</inlineHelpText>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>