force-app/main/default/objects/Customer__c/fields/Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Count__c</fullName>
    <description>Total number of orders placed by this customer</description>
    <inlineHelpText>Automatically calculated count of all orders placed by this customer.</inlineHelpText>
    <label>Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>