force-app/main/default/objects/Customer__c/recordTypes/Business_Customer.recordType-meta.xml
<RecordType>
    <fullName>Business_Customer</fullName>
    <active>true</active>
    <description>Record type for business and enterprise customers with enhanced features</description>
    <label>Business Customer</label>
</RecordType>