force-app/main/default/objects/Customer__c/recordTypes/Individual_Customer.recordType-meta.xml
<RecordType>
    <fullName>Individual_Customer</fullName>
    <active>true</active>
    <description>Record type for individual consumers and personal customers</description>
    <label>Individual Customer</label>
</RecordType>