force-app/main/default/objects/Customer__c/validationRules/Positive_Credit_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Credit_Limit</fullName>
    <active>true</active>
    <description>Ensures that Customer Credit Limit is positive when specified</description>
    <errorConditionFormula>NOT(ISBLANK(Credit_Limit__c)) &amp;&amp; Credit_Limit__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Credit_Limit__c</errorDisplayField>
    <errorMessage>Credit Limit must be greater than zero when specified. Please enter a valid positive amount.</errorMessage>
</ValidationRule>