force-app/main/default/objects/Customer__c/listViews/All_Customers_Enhanced.listView-meta.xml
<ListView>
    <fullName>All_Customers_Enhanced</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Customer_Status__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Customer_Since__c</columns>
    <columns>Total_Order_Value__c</columns>
    <columns>Credit_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers Enhanced</label>
</ListView>