force-app/main/default/objects/Customer__c/listViews/VIP_Customers.listView-meta.xml
<ListView>
    <fullName>VIP_Customers</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Total_Order_Value__c</columns>
    <columns>Credit_Limit__c</columns>
    <columns>Customer_Since__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Status__c</field>
        <operation>equals</operation>
        <value>VIP</value>
    </filters>
    <label>VIP Customers</label>
</ListView>